--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.11.0",
     "input-otp": "^1.4.2",
@@ -76,7 +77,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "tsx": "^4.7.0"
+    "tsx": "^4.19.4",
+    "typescript": "^5"
   }
 }
